<resources>
    <string name="app_name">Field Executive</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="field_executive">Field Executive</string>
    <string name="action_settings">Settings</string>


    <string name="name">Name</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="current">Current Salary</string>
    <string name="saving">Saving Target</string>
    <string name="field">Save Field</string>
    <string name="deleteContact">Are you sure, you want to delete it.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="text">TEXT</string>

    <string-array name="Csalary">
        <item>less than 1,00,000</item>
        <item>100000 "-" 200000</item>
        <item>200000 "-" 300000</item>
        <item>300000 "-" 400000</item>
        <item>400000 "-" 500000</item>
        <item>500000 "-" 600000</item>
        <item>600000 "-" 700000</item>
    </string-array>

    <string-array name="Ssalary">
        <item>less than 10,000</item>
        <item>10000 "-" 20000</item>
        <item>20000 "-" 30000</item>
        <item>30000 "-" 40000</item>
        <item>40000 "-" 50000</item>
        <item>50000 "-" 60000</item>
        <item>60000 "-" 70000</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/submit</item>
        <item>@drawable/profile</item>
        <item>@drawable/logout</item>
    </array>



    <string name="lbl_you_are_at">YOU ARE AT</string>
    <string name="btn_get_location">GET MY LOCATION</string>
    <string name="btn_start_location_updates">START LOCATION UPDATES</string>
    <string name="btn_stop_location_updates">STOP LOCATION UPDATES</string>
    <string name="gps_message">Couldnt get the location. Make sure location is enabled on the device</string>

    <string name="permission_required_toast">Need Permission</string>
    <string name="record_audio_permission_denied" />
    <string name="permission_rationale_record_audio"/>
    <string name="action_log_out">Log Out</string>

</resources>
